# futures

./: .copier-answers.yml  .pre-commit-config.yaml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/actions/coverage/: action.yml
.github/actions/environment/: action.yml
.github/workflows/: book.yml  latex.yml  pre-commit.yml
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md  marimo.md  reports.md
book/docs/: api.html  api.md  index.html  marimo.html  reports.html
marimo/: __init__.html  demo.html
pdoc/: futures.html  index.html  search.js
pdoc/futures/: add.html  bloomberg.html
pdoc/futures/bloomberg/: conn.html  month.html  reference.html  ticker.html
src/futures/bloomberg/: __init__.py  conn.py  month.py  reference.py  ticker.py
src/tests/: test_bloomberg.py  test_connection.py  test_month.py  test_reference.py  test_trivial.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_5fabe909e04cc443___init___py.html  z_5fabe909e04cc443_add_py.html  z_744ffdb5316b2b19___init___py.html  z_744ffdb5316b2b19_conn_py.html  z_744ffdb5316b2b19_month_py.html  z_744ffdb5316b2b19_reference_py.html  z_744ffdb5316b2b19_ticker_py.html
tests/html-report/: report.html
