[project]
name = 'futures'
version = "0.0.0"
description = "Toying with futures"
# Please add authors and correct the email...
authors = [{name='tschm', email= 'tschm@mailinator.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blpapi>=3.25.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "xbbg>=0.7.7",
]

[project.urls]
repository = "https://github.com/tschm/futures"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/futures"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/futures"
]

[tool.bandit]
exclude_dirs = ["tests"]

[[tool.uv.index]]
name = "blpapi"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
default = true

[tool.uv.sources]
blpapi = { index = "blpapi" }
